@@ -1,3 +1,9 @@
+2001-08-07  Steve Youngs  <youngs@xemacs.org>
+
+	* eicq-convert.el (eicq-import-from-licq): Autoload it.
+	Use '====' to take advantage of outline regexp of world-mode.
+	(eicq-import-from-micq): Ditto.
+
 2001-08-06  Erik Arneson  <erik@aarg.net>
 
 	* eicq-convert.el (eicq-import-from-micq): Converts an MICQ
